<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_base_layout" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/qb_px_15"
                android:layout_marginRight="@dimen/qb_px_15"
                android:layout_marginTop="@dimen/qb_px_20">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phonenum"
                    android:inputType="phone"
                    android:textColor="@color/color_212121"
                    android:textSize="15sp" />


            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/qb_px_15"
                android:layout_marginRight="@dimen/qb_px_15">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/qb_px_10"
                    android:layout_toLeftOf="@id/tv_sendcode"
                    android:layout_toStartOf="@id/tv_sendcode">

                    <EditText
                        android:id="@+id/et_verification_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/verificationcode"
                        android:inputType="number"
                        android:textColor="@color/color_212121"
                        android:textSize="15sp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tv_sendcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_button_login"
                    android:paddingBottom="@dimen/qb_px_8"
                    android:paddingLeft="@dimen/qb_px_15"
                    android:paddingRight="@dimen/qb_px_15"
                    android:paddingTop="@dimen/qb_px_8"
                    android:text="@string/get_verificationcode"
                    android:textColor="@color/color_ffffff" />
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/qb_px_15"
                android:layout_marginRight="@dimen/qb_px_15"
                android:layout_marginTop="@dimen/qb_px_10"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_password"
                    android:inputType="textPassword"
                    android:textColor="@color/color_212121"
                    android:textSize="15sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_passwordagain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/qb_px_15"
                android:layout_marginRight="@dimen/qb_px_15"
                android:layout_marginTop="@dimen/qb_px_10"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_phoneagain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ensure_password"
                    android:inputType="textPassword"
                    android:textColor="@color/color_212121"
                    android:textSize="15sp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_yaoqingma"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/qb_px_15"
                android:layout_marginRight="@dimen/qb_px_15"
                android:layout_marginTop="@dimen/qb_px_10"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_yaoqingma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/invitation_code"
                    android:textColor="@color/color_212121"
                    android:textSize="15sp" />


            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/qb_px_15"
                android:layout_marginRight="@dimen/qb_px_15"
                android:layout_marginTop="@dimen/qb_px_30"
                android:background="@drawable/selector_button_login"
                android:gravity="center"
                android:paddingBottom="@dimen/qb_px_10"
                android:paddingTop="@dimen/qb_px_10"
                android:text="@string/regrister"
                android:textColor="@color/color_ffffff"
                android:textSize="18dp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>